--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .nav{
   width: 100%;
   display: flex;
@@ -41,6 +43,467 @@
   background-color: greenyellow;
   height: 50px; width: 150px;
 }
+
+
+
+.lCard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.lcCardIn{
+  background-color: rgb(244, 244, 255);
+  height: 450px;
+}
+
+.lccomma{
+  margin-left: 3px;
+  font-size: 40px;
+  font-weight: 600;
+  width: 40px;
+  height: 40px;
+}
+
+.learnersCard{
+  background-color: white;
+  border: black 1px solid;
+  justify-content: space-between;
+  width: 32%;
+  height: 350px;
+  margin-top: 50px;
+}
+
+.learnersReview{
+  font-weight: 500;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.nameContainer{
+  display: flex;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+
+.pName{
+  font-weight: 700;
+  margin-left: 4px;
+  display: flex;
+}
+
+.pInitials{
+  height: 35px;
+  width: 35px;
+  background-color: black;
+  color: aliceblue;
+  font-weight: 700;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.lcLink{
+  color: blueviolet;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.review-section{
+  background-color: rgb(244, 244, 255);
+  height: 560px;
+  margin-bottom: 100px;
+}
+
+.review-section-heading{
+  font-size: 28px;
+  font-family: sans-serif;
+  font-weight: 700;
+  margin-left: 4%;
+  padding-top: 80px;
+}
+
+.review-section-grid-container {
+  display: grid;
+  grid-template-columns: repeat(3, 430px); /* Change the width of the columns as needed */
+  gap: 20px;
+  height: 320px;
+  margin-left: 4%;
+  margin-right: 2%;
+  width: 94%;
+  margin-top: 2%;
+}
+
+.review-card{
+  background: white;
+  border: 1px solid rgb(200, 200, 200);
+  padding: 15px 20px 16px 30px;
+}
+.review-coma{
+  height: 50px;
+}
+
+.review-name-logo-border{
+  height: 1px;
+  background: #797e89;
+}
+
+.top-category-heading{
+  font-size: 24px;
+  font-weight: 700;           /* Search in app.js */
+  padding-left: 60px;
+  padding-top: 50px;
+}
+.category-container{
+  margin-top: 100px;      /* Search in app.js */
+  
+  
+  
+}
+.category-card{
+  margin-left: 60px;          /* Search in Category component section */
+}
+.top-categories{
+  height: 800px;
+  display: grid;
+  grid-template-columns: repeat(4, 256px);    /* Search in App.js */
+  grid-template-rows: repeat(2, 256px);
+  gap: 40px;
+  row-gap: 80px;
+}
+
+.category-name{
+  font-weight: 700;
+  padding-top: 5px;           /* Search in Category component section */
+}
+
+
+
+
+.trusted_by_section{
+  
+  height: 400px;
+  
+  
+}
+.trusted_by_section_container{
+  
+  margin-top: 100px;
+  
+}
+.trusted_by_heading{
+  font-size: 32px;
+  font-weight: 700;
+  margin-left: 32%;
+  font-family: 'Times New Roman', Times, serif;
+  
+}
+
+.trusted_by_paragraph{
+  margin-left: 26%;
+
+}
+.image-grid{                /* Look in Trusted_by_img.js file*/
+  height: 80px;
+  display: grid;
+  grid-template-columns: repeat(6, 140px);  
+  gap: 60px;                                  
+  margin-left: 7%;
+  margin-top: 30px;
+}
+
+
+
+.more-customer-review-card-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 300px;
+}
+
+.more-customer-stories{
+  background-color: rgb(244, 244, 255);
+  height: 500px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.more-customer-review-card{
+  background-color: white;
+  border: rgb(176, 173, 173) solid 1px;
+  display: flex;
+  width: 65%;
+  height: 400px;
+  
+  
+}
+.more-customer-stories{
+
+}
+.more-customer-review-card-part_left{
+  width: 50%;
+  height: 100%;
+  margin-left: 15px;
+
+
+}
+
+
+
+.more-customer-review-card-part_right-container{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
+.more-customer-review-card-part_right{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  
+  
+}
+
+.customerImg{
+  height: 30%;
+  width: 30%;
+  border-radius: 50%;
+}
+
+.more-customer-review-description{
+  margin-top: -15px;
+  margin-bottom: 37px;
+}
+
+.btnmakanaka{
+  background-color: white;
+  border: none;
+  color: blueviolet;
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: -7px;
+}
+
+
+.upSkillContainerContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.upSkillContainer{
+  display: flex;
+  width: 65%;
+  height: 400px;
+  
+}
+
+ .upSkillContainerLeft{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 50%;
+
+ }
+
+ .upSkillContainerRight{
+  width: 50%;
+ }
+
+
+ li{
+  font-size: 18px;
+  font-weight: 500;
+ }
+
+
+ .btn1{
+  padding: 10px;
+  border: none;
+  margin-right: 7px;
+  height: 50px;
+  background-color: black;
+  color: white;
+  font-weight: 700;
+  
+ }
+
+ .btn2{
+  font-weight: 700;
+  border: 1px black solid;
+  height: 50px;
+  background-color: white;
+  
+ }
+
+
+ .beInstructorContainerContainer{
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: 150px;
+ }
+
+
+ .beInstructorContainer{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 77%;
+ }
+
+
+ .beInstructorLeft{
+  width: 50%;
+ }
+
+ .beInstructorIMG{
+  width: 75%;
+  height: 75%;
+ }
+
+ .beInstructorRight{
+  width: 50%;
+ }
+
+ .beInstructorH{
+  font-size: 35px;
+  font-weight: 700;
+ }
+
+.beInstructorP{
+  width: 75%;
+  font-size: 18px;
+  font-weight: 450;
+  margin-top: 15px;
+}
+
+.beInstructorB{
+  height: 55px;
+  width: 200px;
+  border: none;
+  background-color: black;
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 25px;
+  
+}
+
+
+.footer{
+  height: 310px;
+  background-color: rgb(31, 29, 29);
+}
+
+
+.footerTopContainer{
+  width: 100%;
+  height: 250px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: -25px;
+  
+}
+
+
+.footerCard{
+  display: flex;
+  flex-direction: column;  
+  justify-content: space-around;
+  height: 150px;
+}
+
+.footerCard>a{
+  border: none;
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.footerBtn{
+  display: flex;
+  flex-direction: column;
+
+
+}
+
+.footerCards{
+  justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  width: 65%;
+  margin-left: -25px;
+
+}
+.footerBtnContainer{
+  position: relative;
+  width: 35%;
+  height: 154px;
+}
+
+
+
+.footerBtn{
+  position: absolute;
+  top: 10px;
+  right: 1px;
+
+  border: white 1px solid;
+  background-color: black;
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 1px;
+  margin-right: 1px;
+  width: 130px;
+  height: 45px;
+}
+
+.footerImg{
+  height: 100%;
+  width: 50%;
+  border: red 2px solid;
+}
+
+.footerBottom{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  margin-right: 27px;
+  margin-left: 32px;
+}
+
+.footerBottomImg{
+  height: 80%;
+  width: 9%;
+
+}
+
+.footerBottomTxt{
+  font-size: 12px;
+  font-weight: 300;
+  margin-top: 5px;
+}
+
+
+
+
+
 
 
 
